--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<h1>index.html</h1>
+<script>
+  var dom_title = window.documet.getElementById("title");
+  dom_title.innerText = new Date();
+</script>
+<h1 id="title">index.html</h1>
