--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
-  var dom_title = window.documet.getElementById("title");
+  var dom_title = window.document.getElementById("title");
   dom_title.innerText = new Date();
 </script>
 <h1 id="title">index.html</h1>
